--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -525,7 +525,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v2.1.1</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v2.1.2</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -1916,7 +1916,6 @@
       console.infoUpdate("Time aligned speakers.");
     }
     async function initializeSubwoofers() {
-      if (noSub) { return; }
       if (bassMode === "Directional") {
         await alignMultipleSubwoofers();
       }
@@ -1988,7 +1987,7 @@
       console.log(`Optimizing${useAudyFiltering ? " " : " spatial averaging, "}volume & time alignment...`);
       await initializeTrims();
       await timeAlignSpeakers();
-      await initializeSubwoofers();
+      if (!noSub) { await initializeSubwoofers(); }
       await spatialAverage();
       if (noSub) { return; }
       const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
@@ -2391,22 +2390,26 @@
       if (channelCmdId.includes("R") && commandId.includes(channelCmdId.replace("R", "L"))) { return false; } // where L/R is in the middle
       return true;
     }
-    function findNearestXO(freq) {
-      let xo = Infinity;
-      let minDelta = Infinity;
-      for (let i=0; i < freqIndex.length; i++) {
-        const delta = Math.abs(freqIndex[i] - freq);
-        if (delta < minDelta) {
-          minDelta = delta;
-          xo = freqIndex[i];
+    function findPrevXO(freq) {
+      for (let i = freqIndex.length - 1; i >= 0; i--) {
+        if (freqIndex[i] <= freq) {
+          return freqIndex[i];
         }
       }
-      return xo;
+      return freqIndex.at(0);
+    }
+    function findNextXO(freq) {
+      for (let i = 0; i < freqIndex.length; i++) {
+        if (freq <= freqIndex[i]) {
+          return freqIndex[i];
+        }
+      }
+      return freqIndex.at(-1);
     }
     async function getAbsLow3dBPoint(idx, isSub=true, start=10, end=320) {
       // finds low -3dB point from mean SPL
-      const idxSPL = isSub ? await getSPL(idx, 30, 80, "1%2F6") : await getSPL(idx, 500, 2000, "1%2F6");
-      const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
+      const idxSPL = isSub ? await getSPL(idx, 30, 80) : await getSPL(idx, 500, 2000);
+      const response = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', idx);
       const rpArray = response2array(response, start, end);
       const octave = Math.pow(2, 1/96);
       let rolloff = start;
@@ -2420,8 +2423,8 @@
     }
     async function getAbsHigh3dBPoint(idx, isSub=true, start=10, end=320) {
       // finds high -3dB point from mean SPL
-      const idxSPL = isSub ? await getSPL(idx, 30, 80, "1%2F6") : await getSPL(idx, 500, 2000, "1%2F6");
-      const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
+      const idxSPL = isSub ? await getSPL(idx, 30, 80) : await getSPL(idx, 500, 2000);
+      const response = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', idx);
       const rpArray = response2array(response, start, end);
       const octave = Math.pow(2, 1/96);
       let rolloff = end;
@@ -2433,8 +2436,8 @@
     }
     async function getAbsHigh6dBPoint(idx, isSub=true, start=10, end=320) {
       // finds high -6dB point from mean SPL
-      const idxSPL = isSub ? await getSPL(idx, 30, 80, "1%2F6") : await getSPL(idx, 500, 2000, "1%2F6");
-      const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
+      const idxSPL = isSub ? await getSPL(idx, 30, 80) : await getSPL(idx, 500, 2000);
+      const response = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', idx);
       const rpArray = response2array(response, start, end);
       const octave = Math.pow(2, 1/96);
       let rolloff = end;
@@ -2483,7 +2486,7 @@
           idx = Object.keys(pairAvg.results)[0];
         }
         const rolloff = await getAbsLow3dBPoint(idx, false, 20);
-        let initialXO = findNearestXO(rolloff);
+        let initialXO = findNextXO(rolloff);
         // edge case for no subwoofer
         if (noSub && cmdIds.endsWith("FL & FR")) {
           initialXO = "L";
@@ -2512,10 +2515,10 @@
       console.log("Calculating subwoofer bandwidth...")
       // find low freq point based on max low shelf (REW) or -3dB (Audy) & set minXO
       const subLowFreq = await getAbsLow3dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
-      minXO = findNearestXO(2 * subLowFreq);
+      minXO = findNextXO(2 * subLowFreq);
       // find high freq -6dB point (since LPF is 24dB/oct) and set maxXO
       const subHighFreq = await getAbsHigh6dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
-      maxXO = findNearestXO(subHighFreq);
+      maxXO = findPrevXO(subHighFreq);
       if (minXO >= maxXO) {
         minXO = maxXO;
         console.warn(`Subwoofer has very little bandwidth and can only support ${minXO}hz crossover!`);
@@ -2527,7 +2530,6 @@
       sanityCheckInitialXO(); // update initialXOs based on subwoofer bandwidth
     }
     function sanityCheckInitialXO() {
-      if (noSub) { return; } // no need to go further without subwoofer
       for (let i = 1; i <= nSpeakers; i++) {
         const singleChannel = isSingleChannel(commandId[i]);
         const cmdIds = (singleChannel ? commandId[i] : `${commandId[i]} & ${commandId[1 + i]}`).padStart(9, ".");
