--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -525,7 +525,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v2.1.2</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v2.1.3</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -1996,8 +1996,23 @@
     }
     async function updateEQTargetSettings(idx, start, end, isSub) {
       // aggressively line up response to target curve
-      const tcLevelOffset = isSub ? await getTrim(idx, Math.max(start, 20), Math.min(end, 120), "1%2F48", true)
-                                  : await getTrim(idx, Math.max(start, 200), Math.min(end, 2000), "1%2F48", true);
+      let tcLevelOffset = 0;
+      if (isSub) {
+        const offsets = [];
+        offsets.push(await getTrim(idx, Math.max(start, 20), Math.min(end, 120), "1%2F48", true));
+        offsets.push(await getTrim(idx, Math.max(start, 20),          end,       "1%2F48", true));
+        offsets.push(await getTrim(idx,          start,      Math.min(end, 120), "1%2F48", true));
+        offsets.push(await getTrim(idx,          start,               end,       "1%2F48", true));
+        tcLevelOffset = Math.max(...offsets);
+      }
+      else {
+        const offsets = [];
+        offsets.push(await getTrim(idx, Math.max(start, 200), Math.min(end, 2000), "1%2F48", true));
+        offsets.push(await getTrim(idx, Math.max(start, 200),          end,        "1%2F48", true));
+        offsets.push(await getTrim(idx,          start,       Math.min(end, 2000), "1%2F48", true));
+        offsets.push(await getTrim(idx,          start,                end,        "1%2F48", true));
+        tcLevelOffset = Math.max(...offsets);
+      }
       await fetchSafe('target-level', idx, 75.0 - tcLevelOffset);
       await postSafe(`${baseUrl}/${idx}/target-settings`, {
         shape: isSub ? "Subwoofer" : "Full range",
