--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -525,7 +525,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.2.1</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.2.2</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -2169,11 +2169,24 @@
         throw error;
       }
     }
-
-    // ========================
-    // Main PEQ function
-    // ========================
-    async function addCustomREWFilters(idx, cmdId, baseEQFilterIdx) {
+    async function addDEFilter(baseEQFilterIdx) {
+      // assumes baseEQFilterIdx is the last measurement in REW
+      // adds DE filter directly to the base filter so EQ slots of "-mlp" & "-avg" are left alone
+      try {
+        await addPEQFilter(baseEQFilterIdx, "PK", 1500, 3, 0.5);
+      }
+      catch (error) {
+        console.error("Failed to add dialogue enhancer filter - no more EQ slots left in REW!");
+        throw new Error;
+      }
+      await postNext('Generate predicted measurement', baseEQFilterIdx); // at baseEQFilterIdx + 1
+      await postDelete(baseEQFilterIdx); // DE added to origial filter at baseEQFilterIdx
+    }
+    async function addUserCustomizations(idx, cmdId, baseEQFilterIdx) {
+      // this function adds in any user customizations such as DE, PEQ etc.
+      // *baseEQFilterIdx needs to be last measurement in REW before running this*
+      if (cmdId === "C" && dialogueEnhancer) { await addDEFilter(baseEQFilterIdx); }
+      // add in PEQs from the table(s)
       const prefix = cmdId.toLowerCase();
       const isSub = cmdId.startsWith("SW");
       for (let i = 1; i <= 20; i++) {
@@ -2247,23 +2260,13 @@
           // not really an issue if it fails
           console.debug(`${commandId[i]} could not be equalized!`);
         }
-        // add DE filter
-        if (commandId[i] === "C" && dialogueEnhancer) {
-          try {
-            await addPEQFilter(avgIdx, "PK", 1500, 3, 0.5);
-          }
-          catch (error) {
-            console.error("Failed to add dialogue enhancer filter - no more EQ slots left in REW!");
-            throw new Error;
-          }
-        }
         // cleanup EQ params
         await postSafe(`${baseUrl}/${avgIdx}/target-settings`, { shape: "None" }, "Update processed");
         // generate filters & auto level it
         const filter = await postNext('Generate filters measurement', avgIdx);
         const filterIdx = Object.keys(filter.results)[0];
         await clearFilters(mlpIdx); // use mlp as a placeholder for custom filters
-        await addCustomREWFilters(mlpIdx, commandId[i], filterIdx); // add any user desired customizations
+        await addUserCustomizations(mlpIdx, commandId[i], filterIdx); // add any user desired customizations
         cmdIdFilterIndices[commandId[i]] = filterIdx;
         await fetch_mREW(filterIdx, 'PUT', { title: `${commandId[i]}-filters` });
         const ALOffset = await getALOffset(filterIdx, isSub);
@@ -2315,20 +2318,10 @@
         // start from clean slate
         await clearFilters(mlpIdx);
         await clearFilters(avgIdx);
-        // add DE if needed
-        if (commandId[i] === "C" && dialogueEnhancer) {
-          try {
-            await addPEQFilter(avgIdx, "PK", 1500, 3, 0.5);
-          }
-          catch (error) {
-            console.error("Failed to add dialogue enhancer filter - no more EQ slots left in REW!");
-            throw new Error;
-          }
-        }
         const customFilter = await postNext('Generate filters measurement', avgIdx);
         const customFilterIdx = Object.keys(customFilter.results)[0];
         // add in all user customizations on top of the blank filter & calculate any AL offset
-        await addCustomREWFilters(mlpIdx, commandId[i], customFilterIdx); // add any user desired customizations
+        await addUserCustomizations(mlpIdx, commandId[i], customFilterIdx); // add any user desired customizations
         const ALOffset = await getALOffset(customFilterIdx, isSub);
         // get rid of phase data since it needs to be applied to target curve which is magnitude only
         await postSafe(`${baseUrl}/${customFilterIdx}/command`, { command: "Response magnitude copy" }, "Completed");
